--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ body
     width: 150px;
     margin-left: 50%;
     height: 100%;
+    border-radius: 15px;
     background: rgba(255, 255, 255, 0.1);
 }
 
