--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body
     width: 150px;
     margin-left: 50%;
     height: 100%;
-    border-radius: 15px;
+    border-radius: 15px 0 0 15px;
     background: rgba(255, 255, 255, 0.1);
 }
 
